Clarify blogging FAQs

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -120,9 +120,11 @@ Internship Guide | Outreachy Documentation
 
 <h2 id='blog'><a href='#blog'>Blogging</a></h2>
 
-<p>Interns are required to blog every two weeks about their internship. The Outreachy organizers will provide blog post prompts via email the week before a blog is due. If your mentor has a different topic in mind, you can blog about that instead of using the blog post prompts.<p>
+<p>Interns are required to blog every two weeks about their internship.</p>
 
-<h3>Blog schedule</h3>
+<p>The Outreachy organizers will provide blog post prompts via email. Once interns receive the email, they will have two weeks to write the blog post. If an intern gets behind on blog posts, it's okay to publish the blogs up to 1 week later. Otherwise, move onto writing a blog post for the most recent blog post prompt.</p>
+
+<h3>Blogging schedule</h3>
 
 <p>The Outreachy organizers will send blog prompts on the following dates:</p>
 
@@ -217,6 +219,8 @@ Internship Guide | Outreachy Documentation
 <h3>What if I don't want to use the blog post prompt?</h3>
 
 <p>That's fine! The blog post prompts are designed to give inspiration for interns to write. If you don't like the blog post prompt, or it doesn't apply to you, write something else. You can give a status update on your project instead. Or you could talk about something you're stuck on. Or you could introduce a new tool or skill you learned. Or you could talk about what it's like to work in your free software community.</p>
+
+<p>If your mentor has a different topic in mind, you can blog about that instead of using the blog post prompts.<p>
 
 <p>You're still required to blog every two weeks. The goal is to share your experiences during the internship, and your progress on your project. Even a short update (a paragraph or two) is good.</p>
 
