--- a/home/templates/home/dashboard/mentor.html
+++ b/home/templates/home/dashboard/mentor.html
@@ -85,8 +85,8 @@
 
 				<p>Submitted feedback:</p>
 				<ul>
-				{% if rel.intern_selection.initialmentorfeedback %}
-					<li><p>Initial feedback: {% if rel.intern_selection.initialmentorfeedback.payment_approved %}<button type="button" class="btn btn-success">Payment approved</button>{% else %}<button type="button" class="btn btn-warning">Payment Not Aproved</button>{% endif %}{% if rel.intern_selection.initialmentorfeedback.request_extension %} Extension requested for initial feedback until {{ rel.intern_selection.initialmentorfeedback.extension_date|date:"M d, Y" }}.{% endif %}{% if rel.intern_selection.initialmentorfeedback.request_termination %} Termination requested for this internship.{% endif %}</p></li>
+				{% if rel.intern_selection.initialmentorfeedbackv2 %}
+					<li><p>Initial feedback: {% if rel.intern_selection.initialmentorfeedbackv2.payment_approved %}<button type="button" class="btn btn-success">Payment approved</button>{% else %}<button type="button" class="btn btn-warning">Payment Not Aproved</button>{% endif %}{% if rel.intern_selection.initialmentorfeedbackv2.request_extension %} Extension requested for initial feedback until {{ rel.intern_selection.initialmentorfeedbackv2.extension_date|date:"M d, Y" }}.{% endif %}{% if rel.intern_selection.initialmentorfeedbackv2.request_termination %} Termination requested for this internship.{% endif %}</p></li>
 				{% endif %}
 				{% if rel.intern_selection.midpointmentorfeedback %}
 					<li><p>Midpoint feedback: {% if rel.intern_selection.midpointmentorfeedback.payment_approved %}<button type="button" class="btn btn-success">Payment approved</button>{% else %}<button type="button" class="btn btn-warning">Payment Not Aproved</button>{% endif %}{% if rel.intern_selection.midpointmentorfeedback.request_extension %} Extension requested for midpoint feedback until {{ rel.intern_selection.midpointmentorfeedback.extension_date|date:"M d, Y" }}.{% endif %}{% if rel.intern_selection.midpointmentorfeedback.request_termination %} Termination requested for this internship.{% endif %}</p></li>
@@ -94,7 +94,7 @@
 				{% if rel.intern_selection.finalmentorfeedback %}
 					<li><p>Final feedback: {% if rel.intern_selection.finalmentorfeedback.payment_approved %}<button type="button" class="btn btn-success">Payment approved</button>{% else %}<button type="button" class="btn btn-warning">Payment Not Aproved</button>{% endif %}{% if rel.intern_selection.finalmentorfeedback.request_extension %} Extension requested for final feedback until {{ rel.intern_selection.finalmentorfeedback.extension_date|date:"M d, Y" }}.{% endif %}{% if rel.intern_selection.finalmentorfeedback.request_termination %} Termination requested for this internship.{% endif %}</p></li>
 				{% endif %}
-				{% if not rel.intern_selection.initialmentorfeedback and not rel.intern_selection.midpointmentorfeedback and not rel.intern_selection.finalmentorfeedback %}
+				{% if not rel.intern_selection.initialmentorfeedbackv2 and not rel.intern_selection.midpointmentorfeedback and not rel.intern_selection.finalmentorfeedback %}
 					<li>No feedback has been submitted yet.</li>
 				{% endif %}
 				</ul>
