--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -27,17 +27,14 @@ Initial Feedback for {{ current_round.official_name }}
 							<p>Action to take:</p>
 						</div>
 						<div class="col-2">
-							<p>{% include 'home/snippet/mentor-feedback-status.html' with intern=i mentor_status=initial_mentor_status extension_date=i.initialmentorfeedback.extension_date %}</p>
+							<p>{% include 'home/snippet/mentor-feedback-status.html' with intern=i mentor_status=initial_mentor_status extension_date=i.initialmentorfeedbackv2.extension_date %}</p>
 						</div>
 						<div class="col-8">
-							<p>{{ i.initialmentorfeedback.get_actions_requested_display }}</p>
+							<p>{{ i.initialmentorfeedbackv2.get_actions_requested_display }}</p>
 						</div>
 					</div>
 				</div>
 				<table class="table table-striped table-bordered">
-					<tr>
-						<td colspan="3"><b>Mentor support</b></td>
-					</tr>
 					<thread class="thread-dark">
 					<tr>
 						<th scope="col" class="col-md-1">Feedback from mentor:</th>
@@ -50,62 +47,206 @@ Initial Feedback for {{ current_round.official_name }}
 						<td>Intern - {{ i.intern_name }}</td>
 						<td></td>
 					</tr>
+
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.provided_onboarding %}<button class="btn btn-success">Resources provided</button>{% else %}<button class="btn btn-warning">No resources provided</button>{% endif %}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.provided_onboarding %}<button class="btn btn-success">Resources provided</button>{% else %}<button class="btn btn-warning">No resources provided</button>{% endif %}{% endif %}</td>
-						<td>Has the mentor provided documentation or other resources to help onboard the intern?</td>
+						<td colspan="3"><b>1. Clearing up doubts</b></td>
 					</tr>
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.checkin_frequency == i.initialmentorfeedback.ONCE_DAILY or i.initialmentorfeedback.checkin_frequency == i.initialmentorfeedback.MULTIPLE_WEEKLY or i.initialmentorfeedback.checkin_frequency == i.initialmentorfeedback.ONCE_WEEKLY %}<button class="btn btn-success">Frequent meetings</button>{% elif i.initialmentorfeedback.checkin_frequency == i.initialmentorfeedback.EVERY_OTHER_WEEK %}<button class="btn btn-warning">Infrequent meetings</button>{% else %}<button class="btn btn-danger">No meetings</button>{% endif %}<br>{{ i.initialmentorfeedback.get_checkin_frequency_display }}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.checkin_frequency == i.initialinternfeedback.ONCE_DAILY or i.initialinternfeedback.checkin_frequency == i.initialinternfeedback.MULTIPLE_WEEKLY or i.initialinternfeedback.checkin_frequency == i.initialinternfeedback.ONCE_WEEKLY %}<button class="btn btn-success">Frequent meetings</button>{% elif i.initialinternfeedback.checkin_frequency == i.initialinternfeedback.EVERY_OTHER_WEEK %}<button class="btn btn-warning">Infrequent meetings</button>{% else %}<button class="btn btn-danger">No meetings</button>{% endif %}<br>{{ i.initialinternfeedback.get_checkin_frequency_display }}{% endif %}</td>
-						<td>How often does the mentor have a real-time chat, video conference, or phone conversation to check in with the intern's progress on tasks?</td>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.mentor_answers_questions %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.mentor_answers_questions %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Do mentor(s) answer the intern's questions within 10 hours?</td>
 					</tr>
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.mentor_response_time == i.initialmentorfeedback.HOURS_1 or i.initialmentorfeedback.mentor_response_time == i.initialmentorfeedback.HOURS_3 or i.initialmentorfeedback.mentor_response_time == i.initialmentorfeedback.HOURS_6 %}<button class="btn btn-success">Prompt response</button>{% elif i.initialmentorfeedback.mentor_response_time == i.initialmentorfeedback.HOURS_12 or i.initialmentorfeedback.mentor_response_time == i.initialmentorfeedback.DAYS_1 %}<button class="btn btn-warning">Delayed response</button>{% else %}<button class="btn btn-danger">Very delayed response</button>{% endif %}<br>{{ i.initialmentorfeedback.get_mentor_response_time_display }}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.mentor_response_time == i.initialinternfeedback.HOURS_1 or i.initialinternfeedback.mentor_response_time == i.initialinternfeedback.HOURS_3 or i.initialinternfeedback.mentor_response_time == i.initialinternfeedback.HOURS_6 %}<button class="btn btn-success">Prompt response</button>{% elif i.initialinternfeedback.mentor_response_time == i.initialinternfeedback.HOURS_12 or i.initialinternfeedback.mentor_response_time == i.initialinternfeedback.DAYS_1 %}<button class="btn btn-warning">Delayed response</button>{% else %}<button class="btn btn-danger">Very delayed response</button>{% endif %}<br>{{ i.initialinternfeedback.get_mentor_response_time_display }}{% endif %}</td>
-						<td>On average, how long does it take the mentor to respond to intern questions or requests for feedback?</td>
-					</tr>
-					{% if initial_intern_status == i.SUBMITTED %}<tr><td colspan="3"><p>Intern's report on how the support they received from their mentor:</p><p>{{ i.initialinternfeedback.mentor_support|linebreaksbr }}</p></td></tr>{% endif %}
-					{% if i.initialmentorfeedback %}<tr><td colspan="3"><p>Mentor's report on the support they are providing:</p><p>{{ i.initialmentorfeedback.mentors_report|linebreaksbr }}</p></td></tr>{% endif %}
-					<tr><td colspan="3"><b>Intern progress</b></td></tr>
-					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.in_contact %}<button class="btn btn-success">In contact</button></td>{% else %}<button class="btn btn-warning">Not in contact</button>{% endif %}{% else %}{% endif %}</td>
-					<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.in_contact %}<button class="btn btn-success">In contact</button>{% else %}<button class="btn btn-warning">Not in contact</button>{% endif %}{% endif %}</td>
-					<td>Is intern in contact with their mentor to discuss how to approach their first tasks?</td>
-					</tr>
-					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.asking_questions %}<button class="btn btn-success">Asking questions</button>{% else %}<button class="btn btn-warning">Not asking questions</button>{% endif %}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.asking_questions %}<button class="btn btn-success">Asking questions</button>{% else %}<button class="btn btn-warning">Not asking questions</button>{% endif %}{% endif %}</td>
-						<td>Is the intern asking questions about their first tasks?</td>
-					</tr>
-					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.active_in_public %}<button class="btn btn-success">Active in public</button>{% else %}<button class="btn btn-warning">Not active in public</button>{% endif %}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.active_in_public %}<button class="btn btn-success">Active in public</button>{% else %}<button class="btn btn-warning">Not active in public</button>{% endif %}{% endif %}</td>
-						<td>Is the intern active on public project channels, such as the community's chat, forums, issue tracker, mailing list, etc?</td>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.intern_asks_questions %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.intern_asks_questions %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Does the intern ask mentor(s) questions when stuck for more than 1 to 3 hours?</td>
 					</tr>
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.intern_response_time == i.initialmentorfeedback.HOURS_1 or i.initialmentorfeedback.intern_response_time == i.initialmentorfeedback.HOURS_3 or i.initialmentorfeedback.intern_response_time == i.initialmentorfeedback.HOURS_6 %}<button class="btn btn-success">Prompt response</button>{% elif i.initialmentorfeedback.intern_response_time == i.initialmentorfeedback.HOURS_12 or i.initialmentorfeedback.intern_response_time == i.initialmentorfeedback.DAYS_1 %}<button class="btn btn-warning">Delayed response</button>{% else %}<button class="btn btn-danger">Very delayed response</button>{% endif %}<br>{{ i.initialmentorfeedback.get_intern_response_time_display }} average response time{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.intern_response_time == i.initialinternfeedback.HOURS_1 or i.initialinternfeedback.intern_response_time == i.initialinternfeedback.HOURS_3 or i.initialinternfeedback.intern_response_time == i.initialinternfeedback.HOURS_6 %}<button class="btn btn-success">Prompt response</button>{% elif i.initialinternfeedback.intern_response_time == i.initialinternfeedback.HOURS_12 or i.initialinternfeedback.intern_response_time == i.initialinternfeedback.DAYS_1 %}<button class="btn btn-warning">Delayed response</button>{% else %}<button class="btn btn-danger">Very delayed response</button>{% endif %}<br>{{ i.initialinternfeedback.get_intern_response_time_display }} average response time{% endif %}</td>
-						<td>On average, how long does it take the intern to respond to mentor questions or feedback?</td>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.mentor_support_when_stuck %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.mentor_support_when_stuck %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Do mentor(s) offer more support if the intern is stuck?</td>
 					</tr>
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.full_time_effort %}<button class="btn btn-success">Full-time effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_40 %}<button class="btn btn-success">Full-time effort</button>{% elif i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_50 or i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_60 %}<button class="btn btn-warning">Overtime effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}<br>{{ i.initialinternfeedback.get_hours_worked_display }} per week{% endif %}</td>
+						<td colspan="3"><b>2. Intern and mentor meetings</b></td>
+					</tr>
+					<tr>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.meets_privately %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.meets_privately %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Do mentor(s) meet privately with the intern?</td>
+					</tr>
+					<tr>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.meets_over_phone_or_video_chat %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.meets_over_phone_or_video_chat %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Do mentor(s) meet with the intern over phone or video chat?</td>
+					</tr>
+					<tr>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.intern_missed_meetings %}
+									<button class="btn btn-warning">Yes</button>
+								{% else %}
+									<button class="btn btn-success">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.intern_missed_meetings %}
+									<button class="btn btn-warning">Yes</button>
+								{% else %}
+									<button class="btn btn-success">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Has the intern recently missed more than 2 meetings?</td>
+					</tr>
+					<tr>
+						<td colspan="3"><b>3. Tracking project progress</b></td>
+					</tr>
+					<tr>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.talk_about_project_progress %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.talk_about_project_progress %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Do mentor(s) and the intern talk about project progress at least 3 days a week?</td>
+					</tr>
+					<tr>
+						<td>
+							{% if i.initialmentorfeedbackv2 %}
+								{% if i.initialmentorfeedbackv2.blog_created %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						</td>
+						<td>
+							{% if i.initialinternfeedbackv2 %}
+								{% if i.initialinternfeedbackv2.blog_created %}
+									<button class="btn btn-success">Yes</button>
+								{% else %}
+									<button class="btn btn-warning">No</button>
+								{% endif %}
+							{% endif %}
+						<td>Has the intern created a blog?</td>
+					</tr>
+					<tr>
+						<td colspan="3"><b>4. Mentor support</b></td>
+					</tr>
+
+					{% if initial_intern_status == i.SUBMITTED %}<tr><td colspan="3"><p>Intern's report on mentor support:</p><p>{{ i.initialinternfeedbackv2.mentor_support|linebreaksbr }}</p></td></tr>{% endif %}
+
+					{% if i.initialmentorfeedbackv2 %}<tr><td colspan="3"><p>Mentor's report on mentor support:</p><p>{{ i.initialmentorfeedbackv2.mentors_report|linebreaksbr }}</p></td></tr>{% endif %}
+
+					<tr>
+						<td colspan="3"><b>5. Intern progress</b></td>
+					</tr>
+					<tr>
+						<td>{% if i.initialmentorfeedbackv2 %}{% if i.initialmentorfeedbackv2.full_time_effort %}<button class="btn btn-success">Full-time effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}{% endif %}</td>
+						<td>{% if i.initialinternfeedbackv2 %}{% if i.initialinternfeedbackv2.hours_worked == i.initialinternfeedbackv2.HOURS_40 %}<button class="btn btn-success">Full-time effort</button>{% elif i.initialinternfeedbackv2.hours_worked == i.initialinternfeedbackv2.HOURS_45 or i.initialinternfeedbackv2.hours_worked == i.initialinternfeedbackv2.HOURS_50 or i.initialinternfeedbackv2.hours_worked == i.initialinternfeedbackv2.HOURS_55 or i.initialinternfeedbackv2.hours_worked == i.initialinternfeedbackv2.HOURS_60 %}<button class="btn btn-warning">Overtime effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}<br>{{ i.initialinternfeedbackv2.get_hours_worked_display }} per week{% endif %}</td>
 						<td>Is the intern putting in a full-time effort?</td>
 					</tr>
-					{% if i.initialinternfeedback.time_comments %}<tr><td colspan="3"><p>Intern's comments on their time commitments:</p><p>{{ i.initialinternfeedback.time_comments }}</p></td></tr>{% endif %}
+
+					{% if i.initialinternfeedbackv2.time_comments %}<tr><td colspan="3"><p>Intern's comments on their time commitments:</p><p>{{ i.initialinternfeedbackv2.time_comments }}</p></td></tr>{% endif %}
+					{% if i.initialmentorfeedbackv2 %}<tr><td colspan="3"><p>Mentor's report on intern progress:</p><p>{{ i.initialmentorfeedbackv2.progress_report }}</p></td></tr>{% endif %}
+					{% if i.initialinternfeedbackv2 %}<tr><td colspan="3"><p>Intern's report on intern progress:</p><p>{{ i.initialinternfeedbackv2.progress_report }}</p></td></tr>{% endif %}
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{{ i.initialmentorfeedback.last_contact }}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{{ i.initialinternfeedback.last_contact }}{% endif %}</td>
+						<td>{% if i.initialmentorfeedbackv2 %}{{ i.initialmentorfeedbackv2.last_contact }}{% endif %}</td>
+						<td>{% if i.initialinternfeedbackv2 %}{{ i.initialinternfeedbackv2.last_contact }}{% endif %}</td>
 						<td>Date intern and mentor were last in contact</td>
 					</tr>
 					<tr>
-						<td>{% if i.initialmentorfeedback %}{{ i.initialmentorfeedback.get_submission_date }}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{{ i.initialinternfeedback.get_submission_date }}{% endif %}</td>
+						<td>{% if i.initialmentorfeedbackv2 %}{{ i.initialmentorfeedbackv2.get_submission_date }}{% endif %}</td>
+						<td>{% if i.initialinternfeedbackv2 %}{{ i.initialinternfeedbackv2.get_submission_date }}{% endif %}</td>
 						<td>Date latest feedback was submitted</td>
 					</tr>
-					{% if i.initialmentorfeedback %}<tr><td colspan="3"><p>Mentor's report on the intern's progress:</p><p>{{ i.initialmentorfeedback.progress_report }}</p></td></tr>{% endif %}
-					{% if i.initialinternfeedback %}<tr><td colspan="3"><p>Intern's report on their own progress:</p><p>{{ i.initialinternfeedback.progress_report }}</p></td></tr>{% endif %}
 				{% endwith %}
 			</table>
 		{% endfor %}
