--- a/home/templates/home/sponsor_info.html
+++ b/home/templates/home/sponsor_info.html
@@ -23,18 +23,9 @@ Sponsor info for {{ current_round.official_name }}
 	</table>
 
 	<h2>Community Sponsors</h2>
-	{% for community, sponsor_set in community_sponsors %}
-	<hr><h3>{{ community }}</h3>
-		<p>
-		{% with approved_coordinator_list=community.coordinatorapproval_set.approved %}
-			{% if approved_coordinator_list %}
-				Coordinator{{ approved_coordinator_list|length|pluralize:":,s:" }}
-				{% for approval in approved_coordinator_list %}
-					{{ approval.coordinator.public_name }} &lt;{{ approval.coordinator.account.email }}&gt;{% if not forloop.last %}, {% else %}{% endif %}
-				{% endfor %}
-			{% endif %}
-		{% endwith %}
-		</p>
+	{% for community, sponsor_set, number_interns_approved, total_funding_needed in community_sponsors %}
+		<hr><h3>{{ community }}</h3>
+		<p>${{ total_funding_needed|intcomma }} total funding needed for {{ number_interns_approved }} approved interns.</p>
 		
 		<ul>
 			{% for s in sponsor_set %}
