Change intern and mentor feedback "buttons" that do nothing to badges
When writing the templates to display intern and mentor feedback status,
I used HTML buttons instead of span badge elements. This caused it to
look like you could "click" on the feedback status.

Using buttons instead of badges was very confusing when the status was
"pay". It made it look like you could click the button to send an email
to authorize payment. Instead, the button was supposed to indicate that
the mentor feedback was to pay the intern.

Change to use badges to indicate the feedback status.

--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -36,18 +36,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.mentor_answers_questions %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.mentor_answers_questions %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Do mentor(s) answer the intern's questions within 10 hours?</td>
@@ -56,18 +56,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.intern_asks_questions %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.intern_asks_questions %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Does the intern ask mentor(s) questions when stuck for more than 1 to 3 hours?</td>
@@ -76,18 +76,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.mentor_support_when_stuck %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.mentor_support_when_stuck %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Do mentor(s) offer more support if the intern is stuck?</td>
@@ -99,18 +99,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.meets_privately %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.meets_privately %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Do mentor(s) meet privately with the intern?</td>
@@ -119,18 +119,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.meets_over_phone_or_video_chat %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.meets_over_phone_or_video_chat %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Do mentor(s) meet with the intern over phone or video chat?</td>
@@ -139,18 +139,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.intern_missed_meetings %}
-											<button class="btn btn-warning">Yes</button>
+											<span class="badge badge-warning">Yes</span>
 										{% else %}
-											<button class="btn btn-success">No</button>
+											<span class="badge badge-success">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.intern_missed_meetings %}
-											<button class="btn btn-warning">Yes</button>
+											<span class="badge badge-warning">Yes</span>
 										{% else %}
-											<button class="btn btn-success">No</button>
+											<span class="badge badge-success">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Has the intern recently missed more than 2 meetings?</td>
@@ -162,18 +162,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.talk_about_project_progress %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.talk_about_project_progress %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Do mentor(s) and the intern talk about project progress at least 3 days a week?</td>
@@ -182,18 +182,18 @@ Initial Feedback for {{ current_round.official_name }}
 								<td>
 									{% if intern_selection.initialmentorfeedbackv2 %}
 										{% if intern_selection.initialmentorfeedbackv2.blog_created %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								</td>
 								<td>
 									{% if intern_selection.initialinternfeedbackv2 %}
 										{% if intern_selection.initialinternfeedbackv2.blog_created %}
-											<button class="btn btn-success">Yes</button>
+											<span class="badge badge-success">Yes</span>
 										{% else %}
-											<button class="btn btn-warning">No</button>
+											<span class="badge badge-warning">No</span>
 										{% endif %}
 									{% endif %}
 								<td>Has the intern created a blog?</td>
