--- a/home/templates/home/snippet/mentor-feedback-status.html
+++ b/home/templates/home/snippet/mentor-feedback-status.html
@@ -1,15 +1,15 @@
 {% if not mentor_status or mentor_status == intern.MISSING %}
-<button class="btn btn-secondary">missing</button>
+<span class="badge badge-secondary">missing</span>
 {% elif mentor_status == intern.PAID %}
-<button class="btn btn-secondary">paid</button>
+<span class="badge badge-secondary">paid</span>
 {% elif mentor_status == intern.PAY %}
-<button class="btn btn-success">pay</button>
+<span class="badge badge-success">pay</span>
 {% elif mentor_status == intern.EXTEND %}
-<button class="btn btn-warning">extend</button>
+<span class="badge badge-warning">extend</span>
 {% elif mentor_status == intern.DONT_KNOW %}
-<button class="btn btn-warning">??</button>
+<span class="badge badge-warning">??</span>
 {% elif mentor_status == intern.TERMINATE %}
-<button class="btn btn-danger">terminate</button>
+<span class="badge badge-danger">terminate</span>
 {% elif mentor_status == intern.SUBMITTED %}
-<button class="btn btn-secondary">submitted</button>
+<span class="badge badge-secondary">submitted</span>
 {% endif %}
