--- a/home/templates/home/snippet/twitter_chat_instructions.html
+++ b/home/templates/home/snippet/twitter_chat_instructions.html
@@ -5,7 +5,7 @@
 <p>The following questions are used for the chat:</p>
 
 <div class="container ml-4">
-	<p>Q1: For perspective applicants: What questions do you have for mentors, past interns, or organizers? #OutreachyChat</p>
+	<p>Q1: For interested applicants: What questions do you have for mentors, past interns, or organizers? #OutreachyChat</p>
 	<p>Q2: For past interns and mentors: Please introduce yourself. What community (did you intern with/are you mentoring for)? #OutreachyChat</p>
 	<p>Q3: For past interns and mentors: What do you love about participating in Outreachy? #OutreachyChat</p>
 	<p>Q4: For mentors: What is the project you are mentoring? What skills do people need to apply? What skills can they learn from you? #OutreachyChat</p>
